# sql-lsp

./: .gitignore  Cargo.toml  mise.toml  projects.http
src/: main.rs  project.rs  response_types.rs  utils.rs
src/commands/: login.rs  mod.rs  projects.rs  tickets.rs
