[package]
name = "sql-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
gitlab = "0.1708.2"
