[package]
name = "gitlab-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
edit = "0.1.5"
json_to_table = "0.10.0"
serde_json = "1.0.138"